Adding code for recovering sentence gloss